--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     depends_on:
       - stats-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/stat_db
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stat_db
       - SPRING_DATASOURCE_USER=ewm
       - SPRING_DATASOURCE_PASSWORD=pass
 
