--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -7,12 +7,12 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/stat_db
-spring.datasource.username=ewm
-spring.datasource.password=pass
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USER}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 #---
 spring.config.activate.on-profile=local
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
