--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=8080
+
+stats-server.url=${STATS_SERVER_URL:http://localhost:9090}
+
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
